Optimise for no wildcards